data display label

--- a/levo/levo/Base.lproj/Main.storyboard
+++ b/levo/levo/Base.lproj/Main.storyboard
@@ -49,19 +49,30 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqy-Ue-VE1">
+                                <rect key="frame" x="25" y="69" width="364" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="wqy-Ue-VE1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="2VS-6b-2dU"/>
                             <constraint firstItem="HEN-8C-nQj" firstAttribute="top" secondItem="ny4-qf-bEg" secondAttribute="bottom" constant="50" id="9kS-Ns-E8z"/>
                             <constraint firstItem="ny4-qf-bEg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lg1-I1-xsB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wqy-Ue-VE1" secondAttribute="trailing" constant="25" id="WOp-tx-Fkm"/>
+                            <constraint firstItem="wqy-Ue-VE1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m6M-G1-7en"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HEN-8C-nQj" secondAttribute="bottom" constant="50" id="u8J-el-TDC"/>
+                            <constraint firstItem="wqy-Ue-VE1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="ubn-1a-uTv"/>
                             <constraint firstItem="HEN-8C-nQj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vfa-5U-Ntb"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="J21-BK-eFA"/>
                     <connections>
                         <outlet property="btn" destination="HEN-8C-nQj" id="Oph-4h-wfp"/>
+                        <outlet property="dataLbl" destination="wqy-Ue-VE1" id="lNI-5T-T4g"/>
                         <outlet property="xBtn" destination="mLx-hl-lGy" id="20F-K7-zPt"/>
                         <outlet property="yBtn" destination="DNU-HX-5C8" id="p8a-ww-7GC"/>
                         <outlet property="zBtn" destination="04q-yz-DJD" id="HhO-oE-air"/>
